replace ModelMapper instance of Mapstruct
There was an error in Eclipse, Gradle and Mapstruct